--- a/paper/practicum_marcelo_grossi.bib
+++ b/paper/practicum_marcelo_grossi.bib
@@ -1,6 +1,5 @@
 @article{Schumaker2009,
   doi = {10.1145/1462198.1462204},
-  url = {http://dx.doi.org/10.1145/1462198.1462204},
   year  = {2009},
   month = {feb},
   publisher = {Association for Computing Machinery ({ACM})},
@@ -13,7 +12,6 @@
 }
 @inproceedings{Fu2008,
   doi = {10.1109/wiiat.2008.228},
-  url = {http://dx.doi.org/10.1109/WIIAT.2008.228},
   year  = {2008},
   month = {dec},
   publisher = {Institute of Electrical {\&} Electronics Engineers ({IEEE})},
@@ -23,7 +21,6 @@
 }
 @inproceedings{Oliveira2014,
   doi = {10.1145/2628194.2628235},
-  url = {http://dx.doi.org/10.1145/2628194.2628235},
   year  = {2014},
   publisher = {Association for Computing Machinery ({ACM})},
   author = {Nuno Oliveira and Paulo Cortez and Nelson Areal},
@@ -52,7 +49,6 @@
 }
 @techreport{Boudoukh2013,
   doi = {10.3386/w18725},
-  url = {http://dx.doi.org/10.3386/w18725},
   year  = {2013},
   month = {jan},
   publisher = {National Bureau of Economic Research},
@@ -67,4 +63,11 @@
    school = {Norwegian University of Science and Technology, Department of Computer and Information Science},
    title = {Text Mining of News Articles for Stock Price Predictions},
    year = {2011}
+}
+@book{Handbook,
+  Author = {},
+  Title = {The Handbook of News Analytics in Finance},
+  Publisher = {Wiley},
+  Year = {2011},
+  ISBN = {047066679X}
 }
