corrections to text

--- a/paper/practicum_marcelo_grossi.bib
+++ b/paper/practicum_marcelo_grossi.bib
@@ -15,7 +15,7 @@
   year  = {2008},
   month = {dec},
   publisher = {Institute of Electrical {\&} Electronics Engineers ({IEEE})},
-  author = {Tak-chung Fu and Ka-ki Lee and Donahue Sze and Fu-lai Chung and Chak-man Ng},
+  author = {{Tak-chung} Fu and {Ka-ki} Lee and Donahue Sze and {Fu-lai} Chung and {Chak-man} Ng},
   title = {Discovering the Correlation between Stock Time Series and Financial News},
   booktitle = {2008 {IEEE}/{WIC}/{ACM} International Conference on Web Intelligence and Intelligent Agent Technology}
 }
@@ -25,7 +25,7 @@
   publisher = {Association for Computing Machinery ({ACM})},
   author = {Nuno Oliveira and Paulo Cortez and Nelson Areal},
   title = {Automatic creation of stock market lexicons for sentiment analysis using {StockTwits} data},
-  booktitle = {Proceedings of the 18th International Database Engineering {\&} Applications Symposium on - {IDEAS} {\textquotesingle}14}
+  booktitle = {Proceedings of the 18th International Database Engineering {\&} Applications Symposium on - {IDEAS}'14}
 }
 @article{fama1965behavior,
   title={The behavior of stock-market prices},
@@ -56,7 +56,7 @@
   title = {Which News Moves Stock Prices? A Textual Analysis}
 }
 @misc{Aase2011,
-   author = {Aase, Kim-Georg},
+   author = {Aase, {Kim-Georg}},
    institution = {Norwegian University of Science and Technology, Department of Computer and Information Science},
    pages = {82},
    publisher = {Institutt for datateknikk og informasjonsvitenskap},
@@ -66,8 +66,32 @@
 }
 @book{Handbook,
   Author = {},
+  Editor = {Mitra, Gautam and Mitra, Leela},
   Title = {The Handbook of News Analytics in Finance},
   Publisher = {Wiley},
   Year = {2011},
   ISBN = {047066679X}
+}
+@article{Granger1969,
+  doi = {10.2307/1912791},
+  year  = {1969},
+  month = {aug},
+  publisher = {{JSTOR}},
+  volume = {37},
+  number = {3},
+  pages = {424},
+  author = {C.W.J. Granger},
+  title = {Investigating Causal Relations by Econometric Models and Cross-spectral Methods},
+  journal = {Econometrica}
+}
+@article{Granger1980,
+  doi = {10.1016/0165-1889(80)90069-x},
+  year  = {1980},
+  month = {jan},
+  publisher = {Elsevier {BV}},
+  volume = {2},
+  pages = {329--352},
+  author = {C.W.J. Granger},
+  title = {Testing for causality},
+  journal = {Journal of Economic Dynamics and Control}
 }
