fix citations and re-write abstract

--- a/paper/practicum_marcelo_grossi.bib
+++ b/paper/practicum_marcelo_grossi.bib
@@ -95,3 +95,44 @@
   title = {Testing for causality},
   journal = {Journal of Economic Dynamics and Control}
 }
+@article{DeLong1990a,
+ ISSN = {00223808, 1537534X},
+ author = {J. Bradford De Long, Andrei Shleifer, Lawrence H. Summers, Robert J. Waldmann},
+ journal = {Journal of Political Economy},
+ number = {4},
+ pages = {703-738},
+ publisher = {University of Chicago Press},
+ title = {Noise Trader Risk in Financial Markets},
+ volume = {98},
+ year = {1990}
+}
+@article {Tetlock2007,
+author = {Tetlock, Paul C.},
+title = {Giving Content to Investor Sentiment: The Role of Media in the Stock Market},
+journal = {The Journal of Finance},
+volume = {62},
+number = {3},
+publisher = {Blackwell Publishing Inc},
+issn = {1540-6261},
+doi = {10.1111/j.1540-6261.2007.01232.x},
+pages = {1139--1168},
+year = {2007},
+}
+@misc{Ramos1999,
+  added-at = {2011-08-09T16:33:51.000+0200},
+  author = {Ramos, Juan},
+  keywords = {ontology_learning},
+  timestamp = {2013-05-16T22:34:47.000+0200},
+  title = {Using TF-IDF to Determine Word Relevance in Document Queries},
+  year = 1999
+}
+@article{barber2008all,
+  title={All that glitters: The effect of attention and news on the buying behavior of individual and institutional investors},
+  author={Barber, Brad M and Odean, Terrance},
+  journal={Review of Financial Studies},
+  volume={21},
+  number={2},
+  pages={785--818},
+  year={2008},
+  publisher={Soc Financial Studies}
+}
